# Neural-Maze

./: .gitignore  README.md
agentic_patterns/: .gitignore  README.md  check_models.py  pyproject.toml  requirements.txt
agentic_patterns/examples/: example_multiagent.py  example_planning.py  example_reflection.py  example_tool.py  learn_reflection.py
agentic_patterns/src/agentic_patterns/: __init__.py
agentic_patterns/src/agentic_patterns/multiagent_pattern/: __init__.py  agent.py  crew.py
agentic_patterns/src/agentic_patterns/planning_pattern/: __init__.py  react_agent.py
agentic_patterns/src/agentic_patterns/reflection_pattern/: __init__.py  reflection_agent.py
agentic_patterns/src/agentic_patterns/tool_pattern/: __init__.py  tool.py  tool_agent.py
agentic_patterns/src/agentic_patterns/utils/: __init__.py  completions.py  extraction.py  logging.py
twin_celebrity/: README.md
twin_celebrity/src/.zen/: config.yaml
twin_celebrity/src/vector_twin/qdrant/: utils.py
